--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ main {
 }
 
 section {
-    /* background-color: var(--color5); */
+    background-color: var(--color5);
     max-width: 80%;
     display: flex;
     flex-direction: column;
@@ -67,11 +67,11 @@ header {
 
 
 h2 {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     font-weight: bold;
 	background-color: gold;
 	border-radius: 25px;
-	width: 500px;
+	width: 459px;
 	text-align: center;
 	border: 10px solid transparent;
 	padding: 5px;
@@ -129,7 +129,7 @@ footer {
 }
 
 .main-logo{
-	width: 555px;
+	width: 459px;
 }
 
 .buttons{
@@ -171,4 +171,10 @@ button:hover span:after {
 	text-align: center;
 	border-radius: 25px;
 	font-weight: bold;
+}
+
+.pearl::after{
+	font-size: 8rem;
+	content: url('../assets/dragonpearl2.png');
+	position: absolute;
 }
