--- a/styles/style.css
+++ b/styles/style.css
@@ -175,6 +175,6 @@ button:hover span:after {
 
 .pearl::after{
 	font-size: 8rem;
-	content: url('../assets/dragonpearl2.png');
+	content: url('./assets/dragonpearl3.png');
 	position: absolute;
 }
